# s_offline

./: .gitignore  INSTALL.md  oc.json  opencode.json  pyproject.toml  serena_agent-1.0.0-py3-none-any.whl
opencode/: .gitignore
opencode/agents/: architect.md  coder.md  data-engineer.md  debugger.md  doc-writer.md  ds-mental-models.md  infra-monitor.md  ml-engineer.md  orchestrator.md  refactorer.md  researcher.md  reviewer.md  runner.md  tester.md
opencode/rules/: agent-communication.md  context-management-32k.md  context-management.md  offline-mode.md  timeout-resilience.md  tool-selection.md  venv-management.md
opencode/skills/architecture-graph-serena/: SKILL.md
opencode/skills/clickhouse-analytics/: SKILL.md
opencode/skills/context-optimization/: SKILL.md
opencode/skills/deepstream-pipeline/: SKILL.md
opencode/skills/ds-mental-models/: SKILL.md
opencode/skills/fastapi-backend/: SKILL.md
opencode/tools/: append-log.ts  auto-dream.ts  bash.ts  daemon-worker.ts  daemon.ts  docker.ts  edit.ts  feature-flags.ts  git.ts  glob.ts  grep.ts  mcp-client.ts  mental-model-dispatcher.ts  multi-workspace.ts  ontology.ts  package.json  plan.ts  python-runner.ts  read.ts  session-store.ts  slash-commands.ts  task-queue.ts  task-spawn.ts  todo.ts  transcript-compact.ts  tsconfig.json  ultraplan.ts  web-fetch.ts  web-search.ts  write.ts
src/models/: __init__.py  graph.py  plan.py  spec_entities.py
src/templates/: execution_plan.md  improved_spec.md  ml_spec.md  risk_matrix.md
src/tools/: extract_text.py  validate.py  visualize.py
(+46 files in other folders)
