[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "spec-reviewer"
version = "0.1.0"
description = "AI agent system for technical specification analysis and improvement"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "PyMuPDF>=1.24",
    "python-docx>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]
